tests/NormalTests/paczka1/fuzzy1/41415943.err
Error in line 3: A398 S331 58,0
Error in line 29: R6N2D S331 136,1
Error in line 23: tO93VCpl A398 12,5
